[gd_scene load_steps=34 format=2]

[ext_resource path="res://Font/Giants-Inline.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cars/car_0.png" type="Texture" id=2]
[ext_resource path="res://Loby.gd" type="Script" id=3]
[ext_resource path="res://Tiles/road_asphalt57.png" type="Texture" id=4]
[ext_resource path="res://SoundEffects/TruckHorn.mp3" type="AudioStream" id=5]
[ext_resource path="res://BGMs/Traffic Lights.mp3" type="AudioStream" id=6]
[ext_resource path="res://BGMs/julia.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0196078, 0.0980392, 0.254902, 0.364706 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0196078, 0.0980392, 0.254902, 0.490196 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0196078, 0.0980392, 0.254902, 0.364706 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=20]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.364706, 0.443137, 0.447059, 1 )
border_width_top = 20
border_color = Color( 0.482353, 0.592157, 0.592157, 1 )
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.113725, 0.141176, 0.85098, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.32549, 0.678431, 0.780392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.32549, 0.678431, 0.780392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.709804, 0.796078, 0.819608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.219608, 0.635294, 0.631373, 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[node name="Loby" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.65098, 0.788235, 0.796078, 0.686275 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ColorRect"]
stream = ExtResource( 5 )

[node name="ModeButton" type="Button" parent="ColorRect"]
margin_left = 789.0
margin_top = 464.0
margin_right = 1012.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "Mode"

[node name="Label" type="Label" parent="ColorRect/ModeButton"]
margin_left = 4.0
margin_top = 2.0
margin_right = 57.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "Mode"

[node name="StartButton" type="Button" parent="ColorRect"]
margin_left = 790.0
margin_top = 515.0
margin_right = 1010.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "시작!!"

[node name="SettingButton" type="Button" parent="ColorRect"]
margin_left = 915.0
margin_top = 10.0
margin_right = 1007.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "설정"

[node name="CarsButton" type="Button" parent="ColorRect"]
margin_left = 13.0
margin_top = 10.0
margin_right = 105.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "차고"

[node name="Car" type="Sprite" parent="ColorRect"]
position = Vector2( 440, 350 )
texture = ExtResource( 2 )

[node name="Floor" type="Sprite" parent="ColorRect"]
position = Vector2( 440, 350 )
scale = Vector2( 1.8, 1.8 )
z_index = -1
texture = ExtResource( 4 )

[node name="WindowDialog" type="WindowDialog" parent="ColorRect"]
margin_left = 201.0
margin_top = 55.0
margin_right = 829.0
margin_bottom = 562.0
custom_fonts/title_font = SubResource( 20 )
custom_styles/panel = SubResource( 26 )
window_title = "설정"

[node name="HSlider" type="HSlider" parent="ColorRect/WindowDialog"]
margin_left = 66.0
margin_top = 103.0
margin_right = 564.0
margin_bottom = 159.0
custom_styles/slider = SubResource( 22 )
custom_styles/grabber_area_highlight = SubResource( 25 )
custom_styles/grabber_area = SubResource( 24 )
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect/WindowDialog/HSlider"]
margin_left = 160.0
margin_top = -60.0
margin_right = 330.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 5 )
text = "전체 소리"
align = 1

[node name="LineEdit" type="LineEdit" parent="ColorRect/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = 22.0
margin_right = 156.5
margin_bottom = 64.0
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
text = "User123"
align = 1
placeholder_text = "Enter your Nickname"
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect/WindowDialog/LineEdit"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.5
margin_top = -76.0
margin_right = 85.5
margin_bottom = -13.0
custom_fonts/font = SubResource( 5 )
text = "닉네임"
align = 1
valign = 1

[node name="ExitButton" type="Button" parent="ColorRect/WindowDialog"]
margin_left = 179.0
margin_top = 446.0
margin_right = 450.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "게임 종료"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="BOOSTer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="ColorRect/ModeButton" to="." method="_on_ModeButton_pressed"]
[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="ColorRect/CarsButton" to="." method="_on_CarsButton_pressed"]
[connection signal="value_changed" from="ColorRect/WindowDialog/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="ColorRect/WindowDialog/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="ColorRect/WindowDialog/ExitButton" to="." method="_on_ExitButton_pressed"]
